--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Goodbye World!</h1>
+    <a href="Login.html"><button>Login</button></a>
 </body>
 <script src="script.js"></script>
 </html>
