--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Goodbye World!</h1>
-    <a href="Login.html"><button>Login</button></a>
+    <div class="navbar">
+        <h1>Goodbye World!</h1>
+        <a href="Login.html"><button class="login-button">Login</button></a>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
