--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VITAHABIT</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
-        <h1>Goodbye World!</h1>
-        <a href="Login.html"><button class="login-button">Login</button></a>
+        <h1>VITAHABIT</h1>
+        <div class="links">
+            <a href="" class="link-style">Wellness</a>
+            <a href="" class="link-style">Library</a>
+            <a href="" class="link-style">Progress</a>
+            <a href="Login.html"><button class="login-button">Login</button></a>
+        </div>
     </div>
+    <img src="img.jpg" class="banner">
 </body>
 <script src="script.js"></script>
 </html>
