--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     <div class="navbar">
         <h1>VITAHABIT</h1>
         <div class="links">
-            <a href="" class="link-style">Wellness</a>
-            <a href="" class="link-style">Library</a>
-            <a href="" class="link-style">Progress</a>
+            <a href="#wellness-section" class="link-style">Wellness</a>
+            <a href="#library-section" class="link-style">Library</a>
+            <a href="#progress-section" class="link-style">Progress</a>
             <a href="Login.html"><button class="login-button">Login</button></a>
         </div>
     </div>
     <img src="img.jpg" class="banner">
+    <div class="wellness-section" id="wellness-section">
+        <h1>Wellness</h1>
+    </div>
+    <div class="library-section" id="library-section">
+        <h1>Library</h1>
+    </div>
+    <div class="progress-section" id="progress-section">
+        <h1>Progress</h1>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
