--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a href="Login Page\Login.html"><button class="login-button">Login</button></a>
         </div>
     </div>
-    <img src="img.jpg" class="banner">
+    <div class="banner">
+        <img src="Assets/Phone.png" class="phone">
+    </div>
     <div class="wellness-section" id="wellness-section">
         <h1>Wellness</h1>
     </div>
