--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <h1>Wellness</h1>
     </div>
     <div class="library-section" id="library-section">
-        <h1>Library</h1>
+        <div class="library-content">
+            <h1>Library</h1>
+            <div class="library-icon" role="img" aria-label="Meals icon">MEALS</div>
+        </div>
     </div>
     <div class="progress-section" id="progress-section">
         <h1>Progress</h1>
