--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         </div>
     </div>
     <div class="banner">
+        <div class="bannertext">
+            <h2>V I T A H A B I T</h2>
+            <p>Double click to add subtitle here</p>
+        </div>
         <img src="Assets/Phone.png" class="phone">
     </div>
     <div class="wellness-section" id="wellness-section">
