--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -24,8 +24,17 @@
         </div>
         <img src="Assets/Phone.png" class="phone">
     </div>
-    <div class="loginfirst">
-        <h2>Log in to see your statistics!</h2>
+    <div class="wellness-section" id="wellness-section">
+        <h1>Wellness</h1>
+    </div>
+    <div class="library-section" id="library-section">
+        <div class="library-content">
+            <h1>Library</h1>
+            <div class="library-icon" role="img" aria-label="Meals icon">MEALS</div>
+        </div>
+    </div>
+    <div class="progress-section" id="progress-section">
+        <h1>Progress</h1>
     </div>
 </body>
 <script src="script.js"></script>
