--- a/Login Page/Login.html
+++ b/Login Page/Login.html
@@ -53,7 +53,9 @@
             </div>
             
             <button type="submit" class="next-btn">
-                Next <i class="fas fa-arrow-right"></i>
+                <a href="../index_loggedIn.html">
+                    Next <i class="fas fa-arrow-right"></i>
+                </a>
             </button>
         </form>
     </main>
