--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -19,22 +19,51 @@
     </div>
     <div class="banner">
         <div class="bannertext">
-            <h2>V I T A H A B I T</h2>
+            <h2 class="bannerTitle">V I T A H A B I T</h2>
             <p>Double click to add subtitle here</p>
         </div>
         <img src="Assets/Phone.png" class="phone">
     </div>
     <div class="wellness-section" id="wellness-section">
         <h1>Wellness</h1>
+        <div class="divider-2">
+            <div class="mealplan">
+
+            </div>
+            <div class="sleeptracker">
+
+            </div>
+        </div>
     </div>
     <div class="library-section" id="library-section">
         <div class="library-content">
             <h1>Library</h1>
+            <div class="libraryDivider">
+                <a href=""><div class="libraryBlock">My Coach</div></a>
+                <a href=""><div class="libraryBlock">Community</div></a>
+                <a href=""><div class="libraryBlock">Ranking</div></a>
+                <a href=""><div class="libraryBlock">Article</div></a>
+            </div>
             <div class="library-icon" role="img" aria-label="Meals icon">MEALS</div>
         </div>
     </div>
     <div class="progress-section" id="progress-section">
         <h1>Progress</h1>
+        <div class="progress-calender">
+
+        </div>
+        <div class="workout-calender">
+
+        </div>
+        <div class="before-and-after">
+
+        </div>
+        <div class="achievements">
+
+        </div>
+        <div class="exercise-graphs">
+            
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
