--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -28,41 +28,43 @@
         <h1>Wellness</h1>
         <div class="divider-2">
             <div class="mealplan">
-
+                <p>Meal Plan</p>
             </div>
             <div class="sleeptracker">
-
+                <p>Sleep Tracker</p>
             </div>
         </div>
     </div>
     <div class="library-section" id="library-section">
         <div class="library-content">
             <h1>Library</h1>
-            <div class="libraryDivider">
-                <a href=""><div class="libraryBlock">My Coach</div></a>
-                <a href=""><div class="libraryBlock">Community</div></a>
-                <a href=""><div class="libraryBlock">Ranking</div></a>
-                <a href=""><div class="libraryBlock">Article</div></a>
+            <div class="library-divider">
+                <a href="" class="no-deco"><div class="libraryBlock">My Coach ></div></a>
+                <a href="" class="no-deco"><div class="libraryBlock">Community ></div></a>
+                <a href="" class="no-deco"><div class="libraryBlock">Ranking ></div></a>
+                <a href="" class="no-deco"><div class="libraryBlock">Article ></div></a>
             </div>
-            <div class="library-icon" role="img" aria-label="Meals icon">MEALS</div>
+            <!-- <div class="library-icon" role="img" aria-label="Meals icon">MEALS</div> -->
         </div>
     </div>
     <div class="progress-section" id="progress-section">
         <h1>Progress</h1>
-        <div class="progress-calender">
-
-        </div>
-        <div class="workout-calender">
-
-        </div>
-        <div class="before-and-after">
-
-        </div>
-        <div class="achievements">
-
-        </div>
-        <div class="exercise-graphs">
-            
+        <div class="progress-content">
+            <div class="progress-calendar">
+                <p>Progress calendar</p>
+            </div>
+            <div class="workout-calendar">
+                <p>Workout calendar</p>
+            </div>
+            <div class="before-and-after">
+                <p>Before and after</p>
+            </div>
+            <div class="achievements">
+                <p>Achievements</p>
+            </div>
+            <div class="exercise-graphs">
+                <p>Exercise Graphs</p>
+            </div>
         </div>
     </div>
 </body>
