--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -28,7 +28,29 @@
         <h1>Wellness</h1>
         <div class="divider-2">
             <div class="mealplan">
-                <p>Meal Plan</p>
+                <p class="divider-2-title">Meal Plan</p>
+                <div class="mealplan-content">
+                    <div class="mealplan-graph">
+                        <p>mealplan-graph</p>
+                    </div>
+                    <div class="today-meals">
+                        <p>Today's Meals</p>
+                        <div class="today-meals-block">
+                            <img src="Assets/carlo.png" class="meal-graphic">
+                            <div class="meal-data">
+                                <p class="meal">Salmon Nagiri</p>
+                                <p class="meal-time-data">Today | Breakfast</p>
+                            </div>
+                        </div>
+                        <div class="today-meals-block">
+                            <img src="Assets/carlo.png" class="meal-graphic">
+                            <div class="meal-data">
+                                <p class="meal">Bakmi QQ</p>
+                                <p class="meal-time-data">Today | Dinner</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="sleeptracker">
                 <p>Sleep Tracker</p>
