--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -53,7 +53,43 @@
                 </div>
             </div>
             <div class="sleeptracker">
-                <p>Sleep Tracker</p>
+                <p class="divider-2-title">Sleep Tracker</p>
+                <div class="sleeptracker-content">
+                    <div class="sleeptracker-graph">
+                        <p>sleeptracker-graph</p>
+                    </div>
+                    <div class="mysterious-box">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="daily-sleep-schedule">
+                        <p class="divider-2-title">Daily sleep Schedule</p>
+                    </div>
+                    <div class="today-schedule">
+                        <p>Today's Schedule</p>
+                        <div class="today-schedule-block">
+                            <img src="Assets/carlo.png" class="alarm-graphic">
+                            <div class="sleep-data">
+                                <p class="sleep">Bedtime</p>
+                                <p class="sleep-time-data">21:00</p>
+                            </div>
+                        </div>
+                        <div class="today-schedule-block">
+                            <img src="Assets/carlo.png" class="alarm-graphic">
+                            <div class="sleep-data">
+                                <p class="sleep">Alarm</p>
+                                <p class="sleep-time-data">17:10</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
