--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -109,19 +109,36 @@
         <h1>Progress</h1>
         <div class="progress-content">
             <div class="progress-calendar">
-                <p>Progress calendar</p>
+                <div class="summary-grid">
+                    <div class="summary-box">
+                        <p class="summary-important">12</p>
+                        <p>Workouts</p>
+                    </div>
+                    <div class="summary-box">
+                        <p class="summary-important">11.2</p>
+                        <p>Hours</p>
+                    </div>
+                    <div class="summary-box">
+                        <p class="summary-important">32.9k</p>
+                        <p>Total Kg</p>
+                    </div>
+                </div>
             </div>
             <div class="workout-calendar">
-                <p>Workout calendar</p>
-            </div>
-            <div class="before-and-after">
-                <p>Before and after</p>
+                <div class="title">Your Workouts</div>
+                <div class="calendar">02/05/25 - 02/12/25</div>
+                <div class="calendar-days">
+                <div>Fr<br>05</div>
+                <div>Sa<br>06</div>
+                <div>Su<br>07</div>
+                <div>Mo<br>08</div>
+                <div>Tu<br>09</div>
+                <div>We<br>09</div>
+                <div>Th<br>10</div>
+                </div>
             </div>
             <div class="achievements">
                 <p>Achievements</p>
-            </div>
-            <div class="exercise-graphs">
-                <p>Exercise Graphs</p>
             </div>
         </div>
     </div>
