--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -109,6 +109,13 @@
         <h1>Progress</h1>
         <div class="progress-content">
             <div class="progress-calendar">
+                <div class="summary-bracket">
+                    <div class="bracket">1W</div>
+                    <div class="bracket">1M</div>
+                    <div class="bracket">6M</div>
+                    <div class="bracket">1Y</div>
+                    <div class="bracket">All</div>
+                </div>
                 <div class="summary-grid">
                     <div class="summary-box">
                         <p class="summary-important">12</p>
