HTML and CSS finished
connect to database and Javascript remains

--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -110,7 +110,7 @@
         <div class="progress-content">
             <div class="progress-calendar">
                 <div class="summary-bracket">
-                    <div class="bracket">1W</div>
+                    <div class="bracket selected-bracket">1W</div>
                     <div class="bracket">1M</div>
                     <div class="bracket">6M</div>
                     <div class="bracket">1Y</div>
@@ -132,16 +132,39 @@
                 </div>
             </div>
             <div class="workout-calendar">
-                <div class="title">Your Workouts</div>
-                <div class="calendar">02/05/25 - 02/12/25</div>
+                <div class="workout-calendar-head">
+                    <div class="calendar-title">Your Workouts</div>
+                    <div class="calendar-range">02/05/25 - 02/12/25</div>
+                </div>
                 <div class="calendar-days">
-                <div>Fr<br>05</div>
-                <div>Sa<br>06</div>
-                <div>Su<br>07</div>
-                <div>Mo<br>08</div>
-                <div>Tu<br>09</div>
-                <div>We<br>09</div>
-                <div>Th<br>10</div>
+                    <div class="day selected-day">
+                        <p>Fr</p>
+                        <p>05</p>
+                    </div>
+                    <div class="day">
+                        <p>Sa</p>
+                        <p>06</p>
+                    </div>
+                    <div class="day">
+                        <p>Su</p>
+                        <p>07</p>
+                    </div>
+                    <div class="day">
+                        <p>Mo</p>
+                        <p>08</p>
+                    </div>
+                    <div class="day">
+                        <p>Tu</p>
+                        <p>09</p>
+                    </div>
+                    <div class="day">
+                        <p>We</p>
+                        <p>09</p>
+                    </div>
+                    <div class="day">
+                        <p>Th</p>
+                        <p>10</p>
+                    </div>
                 </div>
             </div>
             <div class="achievements">
