login pake pirebes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <div class="loginfirst">
         <h2>Log in to see your statistics!</h2>
     </div>
+    <script type="module" src="Login Page/script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
