--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -14,7 +14,8 @@
             <a href="#wellness-section" class="link-style">Wellness</a>
             <a href="#library-section" class="link-style">Library</a>
             <a href="#progress-section" class="link-style">Progress</a>
-            <a href="Login Page\Login.html"><button class="login-button">Login</button></a>
+            <button id="logout-btn" class="login-button">Logout</button>
+            <script type="module" src="Login Page/script.js"></script>
         </div>
     </div>
     <div class="banner">
