--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -29,7 +29,10 @@
         <h1>Wellness</h1>
         <div class="divider-2">
             <div class="mealplan">
-                <p class="divider-2-title">Meal Plan</p>
+                <div class="wellness-block-title">
+                    <p class="divider-2-title">Meal Plan</p>
+                    <a href="MealPlan.html">></a>
+                </div>
                 <div class="mealplan-content">
                     <div class="mealplan-graph">
                         <p>mealplan-graph</p>
@@ -54,7 +57,10 @@
                 </div>
             </div>
             <div class="sleeptracker">
-                <p class="divider-2-title">Sleep Tracker</p>
+                <div class="wellness-block-title">
+                    <p class="divider-2-title">Sleep Tracker</p>
+                    <a href="SleepTracker.html">></a>
+                </div>
                 <div class="sleeptracker-content">
                     <div class="sleeptracker-graph">
                         <p>sleeptracker-graph</p>
