--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -40,14 +40,14 @@
                     <div class="today-meals">
                         <p>Today's Meals</p>
                         <div class="today-meals-block">
-                            <img src="Assets/carlo.png" class="meal-graphic">
+                            <img src="Assets/icon.png" class="meal-graphic">
                             <div class="meal-data">
                                 <p class="meal">Salmon Nagiri</p>
                                 <p class="meal-time-data">Today | Breakfast</p>
                             </div>
                         </div>
                         <div class="today-meals-block">
-                            <img src="Assets/carlo.png" class="meal-graphic">
+                            <img src="Assets/icon.png" class="meal-graphic">
                             <div class="meal-data">
                                 <p class="meal">Bakmi QQ</p>
                                 <p class="meal-time-data">Today | Dinner</p>
@@ -82,14 +82,14 @@
                     <div class="today-schedule">
                         <p>Today's Schedule</p>
                         <div class="today-schedule-block">
-                            <img src="Assets/carlo.png" class="alarm-graphic">
+                            <img src="Assets/icon.png" class="alarm-graphic">
                             <div class="sleep-data">
                                 <p class="sleep">Bedtime</p>
                                 <p class="sleep-time-data">21:00</p>
                             </div>
                         </div>
                         <div class="today-schedule-block">
-                            <img src="Assets/carlo.png" class="alarm-graphic">
+                            <img src="Assets/icon.png" class="alarm-graphic">
                             <div class="sleep-data">
                                 <p class="sleep">Alarm</p>
                                 <p class="sleep-time-data">17:10</p>
