--- a/index_loggedIn.html
+++ b/index_loggedIn.html
@@ -31,7 +31,7 @@
             <div class="mealplan">
                 <div class="wellness-block-title">
                     <p class="divider-2-title">Meal Plan</p>
-                    <a href="MealPlan.html">></a>
+                    <a href="MealPlan.html" class="no-deco">></a>
                 </div>
                 <div class="mealplan-content">
                     <div class="mealplan-graph">
@@ -59,7 +59,7 @@
             <div class="sleeptracker">
                 <div class="wellness-block-title">
                     <p class="divider-2-title">Sleep Tracker</p>
-                    <a href="SleepTracker.html">></a>
+                    <a href="SleepTracker.html" class="no-deco">></a>
                 </div>
                 <div class="sleeptracker-content">
                     <div class="sleeptracker-graph">
